# bigint

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  bigint.cpp  bigint.h  main.cpp
.github/workflows/: main.yml
src/: bigint.cpp  bigint.cpp~  bigint.h
src/tests/: add.hpp  divide.hpp  equal_zero.hpp  main.cpp
